# Midualizer

./: .gitignore  LICENSE  LICENSE.txt  README.md
src/: 2d.cpp  2d.h  attributes.cpp  attributes.h  com.octo_translation.Midualizer.desktop  fountain.cpp  fountain.h  generate_wav.cpp  generate_wav.h  gui.h  gui_constructor.cpp  gui_functions.cpp  main.cpp  meson.build  meson_options.txt  notes.cpp  notes.h  prism.cpp  prism.h  shaders.cpp  trackcolor.cpp  trackcolor.h  trackcount.cpp  trackcount.h
